# light_ik

./: .gitignore  CMakeLists.txt  README.md
applications/tests/: CMakeLists.txt  bone_test.cpp  constraints_test.cpp  coordination_test.cpp  light_ik_test.cpp  skeleton_test.cpp  test_body.cpp  test_body.h  test_helpers.h
applications/visualizer/: CMakeLists.txt  main.cpp  plot_area.cpp  plot_area.h
light_ik/: CMakeLists.txt
light_ik/headers/: bone.h  helpers.h  skeleton.h  solver.h  solver_base.h  solver_passive.h  target.h  types.h
light_ik/include/light_ik/: light_ik.h
light_ik/src/: bone.cpp  helpers.cpp  light_ik.cpp  skeleton.cpp  solver.cpp  target.cpp
light_ik_plugin/: CMakeLists.txt
light_ik_plugin/src/: helpers.h  joint_constraints.cpp  joint_constraints.h  light_ik_plugin.cpp  light_ik_plugin.h  register_types.cpp
plugin/: bones.tscn  project.godot
